--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Muhammad Asghar"
-  avatar           : "bio-photo.jpg"
+  avatar           : "bio-photo.png"
   bio              : "Software Engineer and Researcher"
   location         : "New York City"
   employer         :
